hotfix content spacing to prevent ToC overlap

--- a/assets/scss/general.scss
+++ b/assets/scss/general.scss
@@ -59,8 +59,8 @@ code {
 
 .sidenote,
 .marginnote {
-    margin-right: -55%;
-    width: 45%;
+    margin-right: -70%;
+    width: 55%;
 }
 
 
@@ -154,7 +154,7 @@ table.lntable {
         margin: 0;
         left: 1em;
         width: 15%;
-        overflow-wrap: break-word;
+        //overflow-wrap: break-word;
     }
 
     li.active {
